--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,19 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowAnimationStyle">@style/thirdTheme</item>
+    </style>
+
+    <style name="thirdTheme" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/activity_enter_alpha_translate_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/activity_exit_alpha</item>
+        <item name="android:activityCloseEnterAnimation">@anim/activity_enter_alpha</item>
+        <item name="android:activityCloseExitAnimation">@anim/activity_exit_alpha</item>
+
     </style>
 
 </resources>
